# openalexPro

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  DESCRIPTION  DEVELOPMENT.html  DEVELOPMENT.md  NAMESPACE  NEWS.md  README.md  TODO.html  TODO.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.claude/: launch.json
R/: api_call.R  build_corpus_index.R  extendr-wrappers.R  lookup_by_id.R  oa_schema.R  oas_binary.R  opt_api_key.R  opt_filter_names.R  opt_select_fields.R  pro_api_key.R  pro_count.R  pro_download_content.R  pro_fetch.R  pro_query.R  pro_rate_limit_status.R  pro_request.R  pro_request_jsonl.R  pro_request_jsonl_parquet.R  pro_request_parquet.R  pro_validate_credentials.R  snapshot_to_parquet.R  sql_helpers.R
articles/: Quick_Start.html  Quick_Start.md  Workflow.html  Workflow.md  index.html  index.md  pro_query.html  pro_query.md  pro_request.html  pro_request.md  snapshot.html  snapshot.md  snapshot_conversion.html  snapshot_conversion.md
inst/: Makefile.snapshot  compatibility.qmd
man/: build_corpus_index.Rd  build_corpus_index_R.Rd  find_oas_binary.Rd  lookup_by_id.Rd  lookup_by_id_R.Rd  oa_api_files_to_parquet.Rd  oa_build_corpus_index.Rd  oa_cache_schema.Rd  oa_infer_api_list_type.Rd  oa_lookup_by_id.Rd  oa_normalize_duckdb_type.Rd  oa_snapshot_to_parquet.Rd  oa_works_abstract_sql.Rd  oa_works_citation_sql.Rd  opt_api_key.Rd  pro_api_key.Rd  pro_count.Rd  pro_download_content.Rd  pro_fetch.Rd  pro_fetch_R.Rd  (+11 more)
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
(+150 files in other folders)
