[package]
name = 'openalexPro'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'openalexPro'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
openalex-core = { git = "https://github.com/rkrug/openalex-snapshot", rev = "6f30652982b80170cb8073dc7a8209f76d170178", features = ["conversion"] }

[profile.release]
lto = true
codegen-units = 1
