[package]
name = 'openalexPro'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'openalexPro'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
openalex-core = { git = "https://github.com/rkrug/openalex-snapshot", rev = "2da4cce1ee702536dc4ea153d9a08ea8f8d9080c", features = ["conversion"] }

[profile.release]
lto = true
codegen-units = 1
