[package]
name = 'openalexPro'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'openalexPro'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
openalex-core = { git = "https://github.com/rkrug/openalex-snapshot", rev = "63c4758b9c617d1ab78c5a4d524e02e96d5aaefa", features = ["conversion"] }

[profile.release]
lto = true
codegen-units = 1
